refactor(grpc): validate request via proto-gen-validate lib
